<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dk.kb.yggdrasil</groupId>
  <artifactId>Yggdrasil</artifactId>
  <version>1.2.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Yggdrasil</name>

  <repositories>
    <repository>
      <id>bitrepository</id>
      <url>https://sbforge.org/nexus/content/repositories/releases/</url>
    </repository>
  </repositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <bitrepository.version>1.3.0.2</bitrepository.version>
    <slf4j.version>1.7.5</slf4j.version>
    <logback.version>1.0.1</logback.version>
    <jwat.version>1.0.0</jwat.version>
    <assembly.home.env.name>YGGDRASIL_HOME</assembly.home.env.name>
    <assembly.home.env.name.ref>${YGGDRASIL_HOME}</assembly.home.env.name.ref>
    <assembly.config.env.name>YGGDRASIL_CONF_DIR</assembly.config.env.name>
    <assembly.config.env.name.ref>${YGGDRASIL_CONF_DIR}</assembly.config.env.name.ref>
    <assembly.runningmode.env.name>dk.kb.yggdrasil.runningmode</assembly.runningmode.env.name>
    <assembly.runningmode.env.scriptname>YGGDRASIL_RUNNING_MODE</assembly.runningmode.env.scriptname>
    <assembly.runningmode.env.name.ref>${YGGDRASIL_RUNNING_MODE}</assembly.runningmode.env.name.ref>
    <assembly.main.class.name>dk.kb.yggdrasil.Main</assembly.main.class.name>
    <assembly.shutdown.class.name>dk.kb.yggdrasil.Shutdown</assembly.shutdown.class.name>
  </properties>

  <dependencies>
    <dependency> 
      <groupId>org.bitrepository.reference</groupId> 
      <artifactId>bitrepository-core</artifactId>
      <version>${bitrepository.version}</version>
    </dependency>
    <dependency> 
      <groupId>org.bitrepository.reference</groupId> 
      <artifactId>bitrepository-client</artifactId>
      <version>${bitrepository.version}</version>
    </dependency>
    <dependency>
      <groupId>com.rabbitmq</groupId>
      <artifactId>amqp-client</artifactId>
      <version>3.1.4</version>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>1.13</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.2.5</version>
    </dependency>
    <dependency>
      <groupId>uk.org.lidalia</groupId>
      <artifactId>sysout-over-slf4j</artifactId>
      <version>1.0.2</version>
    </dependency>
    <dependency>
      <groupId>com.antiaction</groupId>
      <artifactId>common-json</artifactId>
      <version>0.5.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
     <groupId>com.sleepycat</groupId>
     <artifactId>je</artifactId>
     <version>5.0.73</version>
    </dependency>	
    <dependency>
      <groupId>org.jwat</groupId>
      <artifactId>jwat-common</artifactId>
      <version>${jwat.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jwat</groupId>
      <artifactId>jwat-warc</artifactId>
      <version>${jwat.version}</version>
    </dependency>
    <!-- XSLT 1.0 -->
    <dependency>
      <groupId>xalan</groupId>
      <artifactId>xalan</artifactId>
      <version>2.7.1</version>
    </dependency>
    <!-- XSLT 1.0 -->
    <!--dependency>
      <groupId>saxon</groupId>
      <artifactId>saxon</artifactId>
      <version>6.5.5</version>
    </dependency-->
    <dependency> 
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version> 
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty</artifactId>
      <version>6.1.26</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>1.9.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.8</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
         <version>3.4</version>
        <configuration>
          <linkXref>true</linkXref>
          <sourceEncoding>utf-8</sourceEncoding>
          <minimumTokens>100</minimumTokens>
          <targetJdk>1.8</targetJdk>
        </configuration>
        <executions>
          <execution>
            <id>pmd</id>
            <phase>test</phase>
            <goals>
              <goal>pmd</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <archive>                   
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <systemPropertyVariables>
            <property>
              <name>RABBITMQ_HOSTNAME</name>
              <value>${yggdrasil.rabbitmq.hostname}</value>
            </property>
            <property>
              <name>RABBITMQ_PORT</name>
              <value>${yggdrasil.rabbitmq.port}</value>
            </property>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.5.3</version>
        <executions>
          <execution>
            <id>distro-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <descriptors>
                <descriptor>src/main/assembly/release.xml</descriptor>
              </descriptors>
              <appendAssemblyId>false</appendAssemblyId>
              <tarLongFileMode>gnu</tarLongFileMode>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
<!--       <plugin> -->
<!--         <groupId>org.apache.maven.plugins</groupId> -->
<!--         <artifactId>maven-surefire-report-plugin</artifactId> -->
<!--         <version>2.18.1</version> -->
<!--       </plugin> -->
<!--       <plugin> -->
<!--         <groupId>org.apache.maven.plugins</groupId> -->
<!--         <artifactId>maven-linkcheck-plugin</artifactId> -->
<!--         <version>1.2</version> -->
<!--       </plugin> -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.14</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
        </configuration>
      </plugin>      
<!--       <plugin> -->
<!--         <groupId>org.codehaus.mojo</groupId> -->
<!--         <artifactId>cobertura-maven-plugin</artifactId> -->
<!--         <version>2.6</version> -->
<!--         <configuration> -->
<!--            <failOnError>false</failOnError> -->
<!--            <formats> -->
<!--                <format>html</format> -->
<!--                <format>xml</format> -->
<!--            </formats> -->
<!--         </configuration> -->
<!--       </plugin> -->
<!--       <plugin> -->
<!--         <groupId>org.codehaus.mojo</groupId> -->
<!--         <artifactId>findbugs-maven-plugin</artifactId> -->
<!--         <version>3.0.0</version> -->
<!--         <configuration> -->
<!--            <failOnError>false</failOnError> -->
<!--            <formats> -->
<!--                <format>html</format> -->
<!--                <format>xml</format> -->
<!--            </formats> -->
<!--         </configuration> -->
<!--       </plugin> -->
<!--       <plugin> -->
<!--         <groupId>org.codehaus.mojo</groupId> -->
<!--         <artifactId>sonar-maven-plugin</artifactId> -->
<!--         <version>2.5</version> -->
<!--       </plugin> -->
<!--       <plugin> -->
<!--         <groupId>org.codehaus.mojo</groupId> -->
<!--         <artifactId>taglist-maven-plugin</artifactId> -->
<!--         <version>2.4</version> -->
<!--       </plugin> -->
    </plugins>
  </reporting>
</project>
